Fixed problem with wrong size of bitmap icons in the tree.
The bug caused Firefox to show the whole text as ellipsis, when the
bitmap icon was not loaded.

208111

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/tree/Tree.less
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/tree/Tree.less
@@ -102,6 +102,10 @@
     vertical-align: top;
     padding-right: 7px;
     display: inline-block;
+    /* Use content-box for images because it leads to wrong behavior when someone sets a min-width/height
+     * on an IMG element that has padding and the available space for the image is 'min-width' - 'padding'
+     * See ticket 208111 */
+    box-sizing: content-box;
 
     &:not(.font-icon) {
       margin-top: -2px;
